fixed resolution alignment to 1920x1080

--- a/Work/Assignment_2/css/styles.css
+++ b/Work/Assignment_2/css/styles.css
@@ -10,7 +10,7 @@ body{
 	background-color: #EEEADD;
 	padding: 0;
 	margin: 0;
-	width:100%;
+	width:1920px;
 	max-width: 100%;
 }
 .vertical-center {
